docs/7.52/md/abenshm_areas.md
---
title: "Shared Objects - Areas"
description: |
  An area is a repository object for storing shared objects. It is the template for area instance versions(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenarea_instance_version_glosry.htm 'Glossary Entry') in the shared memory. An identically named area class(https://help.sap.com/do
version: "7.52"
category: "oop"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenshm_areas.htm"
abapFile: "abenshm_areas.htm"
keywords: ["do", "try", "class", "data", "abenshm", "areas"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Creating Objects and Values](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencreate_objects.htm) →  [Shared Objects](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_shared_objects.htm) → 

Shared Objects - Areas

An area is a repository object for storing shared objects. It is the template for [area instance versions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenarea_instance_version_glosry.htm "Glossary Entry") in the shared memory. An identically named [area class](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenarea_class_glosry.htm "Glossary Entry") and any [area root class](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenroot_data_class_glosry.htm "Glossary Entry") are assigned to each area. Areas are created and managed in transaction SHMA. Various properties can be assigned to an area in transaction SHMA. From a technical point of view, the properties are taken into consideration when the area class is generated, or they are stored automatically in the attributes of the area class when an [area handle](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenarea_handle_glosry.htm "Glossary Entry") is created.

-   [Basic Properties](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenshm_area_basic_properties.htm)

-   [Fixed Area Properties](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenshm_area_fixed_properties.htm)

-   [Dynamic Area Properties](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenshm_area_dynamic_properties.htm)

-   [Runtime-Dependent Area Properties](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenshm_area_runtime_properties.htm)

Continue
[Areas - Basic Properties](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenshm_area_basic_properties.htm)
[Areas - Fixed Area Properties](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenshm_area_fixed_properties.htm)
[Areas - Dynamic Area Properties](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenshm_area_dynamic_properties.htm)
[Areas - Runtime-Dependent Area Properties](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenshm_area_runtime_properties.htm)