docs/7.57/md/abenshm_areas.md
---
title: "Shared Objects - Areas"
description: |
  An area is a repository object for storing shared objects. It forms the template for area instance versions(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenarea_instance_version_glosry.htm 'Glossary Entry') in the shared memory. An identically named area class(https://help.sap.com
version: "7.57"
category: "oop"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenshm_areas.htm"
abapFile: "abenshm_areas.htm"
keywords: ["do", "if", "try", "class", "data", "abenshm", "areas"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Creating Objects and Values](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencreate_objects.htm) →  [Shared Objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_shared_objects.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: Shared Objects - Areas, ABENSHM_AREAS, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0AS
uggestion for improvement:)

Shared Objects - Areas

An area is a repository object for storing shared objects. It forms the template for [area instance versions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenarea_instance_version_glosry.htm "Glossary Entry") in the shared memory. An identically named [area class](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenarea_class_glosry.htm "Glossary Entry") and any [area root class](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenroot_data_class_glosry.htm "Glossary Entry") are assigned to each area. Areas are created and managed in transaction SHMA. Various properties can be assigned to an area in transaction SHMA. From a technical perspective, the properties are respected when the area class is generated, or are stored automatically in the attributes of the area class when an [area handle](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenarea_handle_glosry.htm "Glossary Entry") is created.

-   [Basic properties](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenshm_area_basic_properties.htm)
-   [Fixed area properties](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenshm_area_fixed_properties.htm)
-   [Dynamic area properties](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenshm_area_dynamic_properties.htm)
-   [Runtime-dependent area properties](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenshm_area_runtime_properties.htm)

Continue
[Shared Objects - Basic Properties of Areas](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenshm_area_basic_properties.htm)
[Shared Objects - Fixed Area Properties](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenshm_area_fixed_properties.htm)
[Shared Objects - Dynamic Area Properties](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenshm_area_dynamic_properties.htm)
[Shared Objects - Runtime-Dependent Area Properties](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenshm_area_runtime_properties.htm)